publish: Merge pull request #23 from unbill/BDCS-671-add-identifier-to-events
generated from commit 5eb4cc2d2544c558c4f88e8620f7017a3a05f601

--- a/index.html
+++ b/index.html
@@ -2931,6 +2931,10 @@ When an interesting event occurs, we create a new <code>Event</code> object. For
 <td>The <code>id</code> of the <code>partner</code> to which the event pertains.</td>
 </tr>
 <tr>
+<td><code>identifier</code></td>
+<td>Your internal <code>identifier</code> associated with the <code>client</code>.</td>
+</tr>
+<tr>
 <td><code>created</code></td>
 <td>An <code>ISO 8601</code> formatted date of when this event was created.</td>
 </tr>
