publish: Merge pull request #25 from unbill/BDCS-917-fix-typo-scheduled-payments
generated from commit a1304cde9a53255582d505f020d33a9537a203f4

--- a/index.html
+++ b/index.html
@@ -3523,7 +3523,7 @@ When an interesting event occurs, we create a new <code>Event</code> object. For
 </thead><tbody>
 <tr>
 <td><code>type</code></td>
-<td><code>bill.payment.sent</code></td>
+<td><code>bill.payment.scheduled</code></td>
 </tr>
 <tr>
 <td><code>payload.data.company</code></td>
