--- a/index.html
+++ b/index.html
@@ -336,6 +336,12 @@
             <a href="#changelog" class="toc-h1 toc-link" data-title="Changelog">Changelog</a>
               <ul class="toc-list-h2">
                   <li>
+                    <a href="#sep-3rd-2019" class="toc-h2 toc-link" data-title="Sep 3rd, 2019">Sep 3rd, 2019</a>
+                  </li>
+                  <li>
+                    <a href="#aug-7th-2019" class="toc-h2 toc-link" data-title="Aug 7th, 2019">Aug 7th, 2019</a>
+                  </li>
+                  <li>
                     <a href="#may-7th-2019" class="toc-h2 toc-link" data-title="May 7th, 2019">May 7th, 2019</a>
                   </li>
                   <li>
@@ -2495,7 +2501,6 @@ The bill&#39;s <code>payDate</code> is the date in which the next bill payment w
   -H <span class="s2">"Content-Type: application/json"</span> <span class="se">\</span>
   -d <span class="s1">'{
     "identifier": "Bk0zwVx1Z",
-    "nonce": false,
     "meta": {
       "firstName": "Demo",
       "lastName": "User",
@@ -2533,8 +2538,8 @@ The bill&#39;s <code>payDate</code> is the date in which the next bill payment w
 <td>A unique identifier that represents a user in your system.</td>
 </tr>
 <tr>
-<td><code>nonce</code></td>
-<td>Tokens are instantly consumed upon use. If you would like to make a re-useable token, you may set <code>nonce</code> to <code>false</code>.</td>
+<td><code>expiration</code></td>
+<td>An <code>ISO 8601</code> formatted date that sets when this token will expire. If no <code>expiration</code> is specified, the token will expire after 24 hours.</td>
 </tr>
 <tr>
 <td><code>meta</code></td>
@@ -3576,7 +3581,15 @@ When an interesting event occurs, we create a new <code>Event</code> object. For
 <td>The <a href="#the-payment-method-object">payment method object</a> linked to the swap.</td>
 </tr>
 </tbody></table>
-<h1 id='changelog'>Changelog</h1><h3 id='may-7th-2019'>May 7th, 2019</h3>
+<h1 id='changelog'>Changelog</h1><h3 id='sep-3rd-2019'>Sep 3rd, 2019</h3>
+<ul>
+<li>Replaced <code>nonce</code> tokens with an <code>expiration</code> date for <a href="#create-token">Client Token</a> creation.</li>
+</ul>
+<h3 id='aug-7th-2019'>Aug 7th, 2019</h3>
+<ul>
+<li>Added URL Examples for the <a href="#connect">Connect</a> component.</li>
+</ul>
+<h3 id='may-7th-2019'>May 7th, 2019</h3>
 <ul>
 <li>Removed authentication endpoints in favor of the <a href="#connect">Connect</a> component.</li>
 <li>Added <code>identifier</code> to <a href="#the-payment-method-object">payment method object</a>.</li>
