--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ https://sb-api.q2open.io/v1 (sandbox)
 <li>Add the date that was included in the signature to the <code>Date</code> header of the request.</li>
 </ul>
 
-<p>When request signing is eabled, a signature must be provided with every API request.
+<p>When request signing is enabled, a signature must be provided with every API request.
 If the signature is not provided, a <code>401-Unauthorized</code> response will result.</p>
 <h1 id='products'>Products</h1>
 <p>Our white-label products are the fastest way to implement our API&#39;s functionality with a design that fits your branding. We&#39;ve built a set of products that key in on common use cases of our API. These products include <a href="#connect">Connect</a>, <a href="#cardswap">CardSwap</a> and <a href="#biller-direct">Biller Direct</a>.</p>
